src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.px1 {
  padding: 0 1rem 0 1rem;
}

.mt2 {
  margin-top: 2rem;
}

.todo {
  margin-bottom: 1rem;
}

.todo.completed span {
  text-decoration: line-through;
}

.todo label {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
  padding: 1rem;
  background: #f3f3f3;
}

.todo i {
  z-index: 2;
}

